--- a/main.html
+++ b/main.html
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Playlist</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <div class="playlist-container">
+    <h1 style="text-align: center;">My Playlist</h1>
 
+    <!-- Playlist Box -->
+    <div class="playlist-box">
+      <ul>
+        <li style="list-style-type: none;"><a href="#" target="_blank" style="text-decoration-line: none;">Song 1</a></li>
+        <li style="list-style-type: none;"><a href="#" target="_blank" style="text-decoration-line: none;">Song 2</a></li>
+        <li style="list-style-type: none;"><a href="#" target="_blank" style="text-decoration-line: none;">Song 3</a></li>
+        <li style="list-style-type: none;"><a href="#" target="_blank" style="text-decoration-line: none;">Song 4</a></li>
+        <li style="list-style-type: none;"><a href="#" target="_blank" style="text-decoration-line: none;">Song 5</a></li>
+      </ul>
+    </div>
+
+    <h2 style="text-align: center;">Now Playing...</h2>
+
+    <div class="player_one" style="background-color: rgb(255, 255, 255); padding: 10px; border-radius: 10px;">
+      <video controls>
+        <source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </div>
+
+    <h2 style="text-align: center;">MP3 songs</h2>
+
+    <div class="player_two" style="background-color: rgb(255, 255, 255); padding: 10px; border-radius: 10px;">
+      <audio controls>
+        <source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mp3">
+        Your browser does not support the audio element.
+      </audio>
+    </div>
+  </div>
 </body>
-
 </html>
